# programming-lab

./: .gitignore  CMakeLists.txt  README.md
src/: asset_manager.c  asset_manager.h  config.h  game.c  gdiplus_c.h  main.c
src/game/: game.c  game.h
src/game/actors/player/: player.c  player.h
src/game/attacks/: attack.c  attack.h  attack_types.h
src/game/collision/: collision_manager.c  collision_manager.h  collision_types.h
src/game/entities/actors/: actor_manager.c  actor_manager.h
src/game/entities/actors/boss/: boss.c  boss.h  boss_catalog.c  boss_catalog.h  boss_types.h
src/game/entities/actors/boss/boss_A/: boss_A.c  boss_A.h
src/game/entities/actors/player/: player.c  player.h
src/game/entities/beams/: beam.c  beam.h  beam_catalog.c  beam_catalog.h  beam_types.h
src/game/entities/boss/: boss.c  boss.h
src/game/entities/bullet/: bullet.c  bullet.h
src/game/entities/projectiles/: projectile.c  projectile.h  projectile_catalog.c  projectile_catalog.h  projectile_types.h
src/game/entities/star/: star.c  star.h
src/game/patterns/: pattern.c  pattern.h  pattern_catalog.c  pattern_catalog.h  pattern_types.h
src/game/patterns/aimed/: aimed.c  aimed.h
src/game/patterns/fixed/: fixed.c  fixed.h
src/game/patterns/plasma/: plasma.c  plasma.h
src/game/patterns/rotating/: rotating.c  rotating.h
src/game/projectiles/: projectile.c  projectile_types.h
src/game/ui/: ui_manager.c  ui_manager.h
